# stdash

./: .pyproject.toml.swp  Dockerfile  pyproject.toml
src/stdash/: app.py  main.py  requirements.txt
src/stdash/pages/: page_1.py  page_2.py
